# corpus-generator

./: README.md  pyproject.toml
corpus_generator/: alto.py  generate_corpus.py  issue.py  mets.py
tests/: test_article.py  test_issue.py  test_mets.py
tests/data/06_01/: Princetonian_1968-05-06_v92_n061_0001-METS.xml
tests/data/06_01/Princetonian-ALTO/: Princetonian_1968-05-06_v92_n061_ALTO0001.xml  Princetonian_1968-05-06_v92_n061_ALTO0002.xml  Princetonian_1968-05-06_v92_n061_ALTO0003.xml  Princetonian_1968-05-06_v92_n061_ALTO0004.xml  Princetonian_1968-05-06_v92_n061_ALTO0005.xml  Princetonian_1968-05-06_v92_n061_ALTO0006.xml  Princetonian_1968-05-06_v92_n061_ALTO0007.xml  Princetonian_1968-05-06_v92_n061_ALTO0008.xml
